fixed: fix eslint rules of import/order

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,20 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index"
+        ]
+      }
+    ],
+
     "import/prefer-default-export": "off"
   }
 }
