chore: fix eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
   },
   "rules": {
     "import/prefer-default-export": "off",
-    "react/require-default-props": "off"
+    "react/require-default-props": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
   }
 }
